--- a/css/style.css
+++ b/css/style.css
@@ -158,10 +158,10 @@ input[type="submit"] {
     background: var(--blue, #0065FC);    
 }
 
-article {
+article-recherche {
     display: flex;
     flex-direction: row;
-align-items: center;
+    align-items: center;
 }
 
 
@@ -180,7 +180,7 @@ align-items: center;
 .choix-filtre {
     display: flex;
     height: 50px;
-    padding: 4px 19px;
+    padding: 0px 19px;
     align-items: center;
     gap: 10px;
     border-radius: 31px;
@@ -223,6 +223,43 @@ align-items: center;
 /****** Hebergements ***********/
 .hebergements {
     width: 65%;
+}
+
+.hebergements-cards img {
+    width: 100%;
+    height: 125px;
+    border-radius: 20px 20px 0px 0px;
+    object-fit: cover;
+
+
+}
+
+.box1 {
+    margin-bottom: 15px;
+}
+
+.box1, .box2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.card2 {
+    width: 240px;
+    background-color: white;
+    border-radius: 20px;
+    padding: 5px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+
+.card-content2 {
+    padding-left: 10px;
+}
+
+.section-hebergement-title {
+    margin-top: 0px;
+    margin-bottom: 33px;
 }
 
 /****** Populaires ***********/
@@ -271,7 +308,25 @@ align-items: center;
     margin-bottom: 5px;
 }
 
+/******activités***********/
 
+.box-activites {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.card3 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card3 img {
+    width: 100%;
+    height: 380px;
+    border-radius: 20px 20px 0px 0px;
+    object-fit: cover;
+}
 
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
