--- a/css/style.css
+++ b/css/style.css
@@ -99,17 +99,26 @@ nav {
     width: 100%;
 }
 
-       
+.p-titre {
+    margin-top: 0;
+}
+
+h1 {
+    margin-bottom: 0;
+}
 
 
 /****** Section recherche ***********/
 
+.article-recherche {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 form {
     display: flex;
-    width: 500px;
-    height: 50px;
-    justify-content: space-between;
-    gap: 24px;
+    width: 35%;
     border-radius: 15px;
     border: 1px solid var(--grey, #F2F2F2);
     background: var(--white, #FFF);
@@ -117,16 +126,15 @@ form {
     padding: 0;
 }
 
-.dot1 {
+.dot-loc {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #F2F2F2;
-    width: 62px;
+    width: 50px;
     height: 50px;
     border: #F2F2F2 1px solid;    
     border-radius: 15px 0px 0px 15px;
-    padding: 0px
 }
 
 .fa-location-dot {
@@ -134,7 +142,7 @@ form {
 }
 
 input {
-    text-align: center;
+    text-align: start;
     font-family: Raleway;
     font-size: 18px;
     font-style: normal;
@@ -142,26 +150,42 @@ input {
     line-height: normal;
 }
 
-input[type="text"] {
+input[type="search"] {
     outline: none;
-    border: 0
+    border: 0;
+    font-size: 18px;
+    text-align: center;
 }
 
-input[type="submit"] {
-    display: flex;
-    height: 49px;
+
+input[type="button"] {
     padding: 15px 16px;
-    gap: 10px;
     color: var(--white, #FFF);
     border-radius: 0px 15px 15px 0px;
     border: 1px solid var(--blue, #0065FC);
     background: var(--blue, #0065FC);    
 }
 
-article-recherche {
+.input-icone {
     display: flex;
     flex-direction: row;
+}
+
+.fa-magnifying-glass {
+    color: var(--white, #FFF);   
+}
+
+.glass-icone {
+    display: none;
     align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+    font-size: 14px;
+    border: 1px solid var(--blue, #0065FC);
+    background: var(--blue, #0065FC); 
+    border-radius: 15px;
+
 }
 
 
@@ -225,35 +249,49 @@ article-recherche {
     width: 65%;
 }
 
-.hebergements-cards img {
+.hebergements-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.hebergements img {
     width: 100%;
     height: 125px;
     border-radius: 20px 20px 0px 0px;
     object-fit: cover;
-
-
 }
 
-.box1 {
-    margin-bottom: 15px;
+
+
+.lien-hebergement-a-marseilles {
+    width: 31%;
+    padding-bottom: 30px;
+  
 }
 
-.box1, .box2 {
+.card-title-hebergements {
+    margin: 0;
+}
+
+.card-subtitle {
+    margin: 0;
+}
+
+.afficher-plus {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
+    align-items: flex-end;
 }
 
-.card2 {
-    width: 240px;
+.article-hebergement {
     background-color: white;
     border-radius: 20px;
     padding: 5px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
-.card-content2 {
+.card-content-hebergement {
     padding-left: 10px;
 }
 
@@ -261,6 +299,13 @@ article-recherche {
     margin-top: 0px;
     margin-bottom: 33px;
 }
+
+.neutral-star, .star {
+    color: #D9D9D9;
+}
+
+
+
 
 /****** Populaires ***********/
 .populaires {
@@ -288,11 +333,12 @@ article-recherche {
 .populaires-cards .card-content {
     width: 67%;
     padding-left: 15px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     box-sizing: border-box;
-    display: block;
+
 }
 
 .populaires-cards .card-title {
@@ -308,35 +354,77 @@ article-recherche {
     margin-bottom: 5px;
 }
 
+.card-content {
+    display: block;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
 /******activités***********/
+
 
 .box-activites {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     width: 100%;
 }
 
-.card3 {
-    display: flex;
-    flex-direction: column;
-    margin: 30px;
-    height: 439px;
-    width: 300px;
-    border-radius: 20px;
-    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.5);
+.lien-activités-a-marseilles {
+    width: 23%;
+}
+
+.activités-marseilles {
+    padding: 20px;
+}
+
+.card-txt-activites {
+    padding: 0px 0px 0px 20px;
 
 }
 
-.card3 img {
+.carte-activite-image {
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.5);   
+}
+
+.carte-activite-image img {
     width: 100%;
     height: 380px;
     border-radius: 20px 20px 0px 0px;
     object-fit: cover;
 }
 
-.card-title {
-    padding-left: 15px;
+
+
+/*************************footer*****************/
+
+footer {
+    display: flex;
+    flex-direction: row;
+    background-color: #F2F2F2;
+    margin-top: 35px;
+
 }
+
+.ul-footer {
+    width: 33%;
+    padding-left: 20px;
+}
+
+.li-footer {
+    display: block;
+    margin-top: 15px;
+}
+
+.liens-footer {
+    padding: 0;
+}
+
+
 
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
@@ -344,6 +432,13 @@ article-recherche {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
+
+    .main-container {
+        padding: 0%;
+    }  
+    
+
+
     .hebergements-and-populaires {
         flex-direction: column;
     }
@@ -363,9 +458,10 @@ article-recherche {
         justify-content: space-between;
     }
 
-    .populaires-cards .card {
-        width: 30%;
+    .lien-card {
+        width: 32%;
     }
+
 
     .populaires-cards .card-title {
         font-size: 14px;
@@ -374,9 +470,223 @@ article-recherche {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+
+    h1 {
+        font-size: 21px;
+    }
+
+    .article-recherche {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    .ul-filtre, ul {
+        padding-left: 0%;
+
+    }
+
+    h2 {
+        margin-bottom: 0%;
+    }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    .card-title {
+        font-size: 11px;
+    }
+
+    .article-hebergement {
+        height: 100%;
+    }
+
+    .hebergements-cards {
+        display: flex;
+        width: 100%;
+    }
+
+    .box-activites{
+        padding-top: 30px;
+    }
+
+    .carte-activite-image {
+        height: 100%;
+    }
+
+    .carte-activite-image img {
+        height: 200px;
+    }
+
+
+
+
 }
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
-    /* ... */
+
+    body {
+        margin: 0px 20px 0px 20px;
+    }
+
+    .main-container {
+        padding: 0%;
+        margin: 0%;
+        width: 100%;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .lien-logo {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+
+
+    .li-nav:hover {
+        border-bottom: solid #0065FC 2px ;
+        width: 100%;
+        border-top: none;
+        color: #0065FC;
+        padding-bottom: 10px;
+    }
+
+    form {
+        width: 100%;
+        margin-top: 35px;
+    }
+
+    input[type="button"] {
+        display: none;
+    }
+
+    input[type="search"] {
+        font-size: 15px;
+    }
+
+
+    .glass-icone {
+        display: flex;
+    }
+
+    h2 {
+        font-size: 18px;
+    }
+
+
+
+    p {
+        font-size: 15px;
+    }
+
+    .ul-filtres {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .choix-filtre {
+        width: 32%;
+        height: 30px;
+        font-size: 12px;
+    }
+
+
+
+    .hebergements-and-populaires {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .hebergements {
+        width: 100%;
+    }
+    
+    .hebergements-cards {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .lien-hebergement-a-marseilles {
+        width: 100%;
+        padding-bottom: 30px;
+    }
+
+    .populaires {
+        margin-top: 0%;
+    }
+
+    .section-title {
+        font-size: 18px;
+    }
+
+    .populaires-cards {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .lien-card {
+        width: 100%;
+    }
+
+    .populaires-cards img {
+        width: 30%;
+        height: 136px;
+        border-radius: 20px 0px 0px 20px;
+    }
+
+    .box-activites {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .card-title {
+        font-size: 16px;
+    }    
+
+    .lien-activités-a-marseilles {
+        width: 100%;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+
+    .ul-footer {
+        width: 100%;
+        font-size: 16px;
+    }
+
+
+
+
 }
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
